# serverless-wasmedge-bindgen

./: README.md
functions/classify/: Cargo.toml
functions/classify/src/: infer.rs
functions/classify/src/models/goolenet/: goolenet.txt
image-api-go/: image_api.go
image-api-wasi-socket-rs/: Cargo.toml  run_api_wasi_socket_rs.sh
image-api-wasi-socket-rs/src/: main.rs
web-port/: run_web.sh  web_port.go
web-port/static/: home.html  page.js  style.css
