[package]
name = "image-api-wasi-socket-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
wasmedge_wasi_socket = "0.2.0"
httpcodec = "0.2.3"
base64 = "0.13.0"
bytecodec = "0.4.15"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
wasmedge_tensorflow_interface = "^0.2.0"
wasmedge-bindgen = "0.1.13"
wasmedge-bindgen-macro = "0.1.13"
